--- a/src/Template/cup/form/view/detail.twig
+++ b/src/Template/cup/form/view/detail.twig
@@ -54,7 +54,7 @@
                 <div class="card-footer">
                     <form action="/cup/form/{{ item.form_uuid }}/view/{{ item.uuid }}/delete" method="post" onsubmit="return confirm('Вы действительно хотите удалить запись?');">
                         <button type="submit" class="btn btn-danger btn-round">
-                            <i class="fas fa-trash-alt"></i> Удалить запись
+                            <i class="fas fa-fw fa-trash-alt"></i> Удалить
                         </button>
                     </form>
                 </div>
