--- a/src/Template/cup/form/view/list.twig
+++ b/src/Template/cup/form/view/list.twig
@@ -51,7 +51,7 @@
                                                     <li>
                                                         <form action="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить запись?');">
                                                             <button type="submit" class="btn btn-link text-danger">
-                                                                <i class="fas fa-trash-alt"></i> Удалить
+                                                                <i class="fas fa-fw fa-trash-alt"></i> Удалить
                                                             </button>
                                                         </form>
                                                     </li>
