--- a/src/Template/cup/user/subscriber/index.twig
+++ b/src/Template/cup/user/subscriber/index.twig
@@ -49,7 +49,7 @@
                                                 <li>
                                                     <form action="/cup/user/subscriber/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить подписку?');">
                                                         <button type="submit" class="btn btn-link text-danger">
-                                                            <i class="fas fa-trash-alt"></i> Удалить
+                                                            <i class="fas fa-fw fa-trash-alt"></i> Удалить
                                                         </button>
                                                     </form>
                                                 </li>
