--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -66,7 +66,7 @@
                                                         <li>
                                                             <form action="/cup/catalog/order/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить заказ?');">
                                                                 <button type="submit" class="btn btn-link text-danger">
-                                                                    <i class="fas fa-trash-alt"></i> Удалить
+                                                                    <i class="fas fa-fw fa-trash-alt"></i> Удалить
                                                                 </button>
                                                             </form>
                                                         </li>
